# stalagmite

./: .gitignore  DFAM_RULES.md  GETTING_STARTED.md  HANDOFF.md  LICENSE  LITERATURE.md  README.md  dfam_audit.py  dfam_autofix.py  dfam_batch.py  dfam_diff.py  dfam_fix.py  dfam_gui.py  dfam_intent.py  dfam_logo.py  dfam_orient.py  dfam_patch.py  dfam_profiles.py  dfam_repair.py  dfam_report.py  pyproject.toml  stalagmite.py  test_autofix.py  test_batch.py  test_corpus.py  test_fix.py  test_fixtures.py  test_intent.py  test_orient_verify.py  test_patch.py  test_repair.py  test_robustness.py  test_roofcone.py  vendor_three.py
demo/: 01_violations.ply  06_violations.ply  report_01_worst.html  report_06_clean.html
docs/profiles/: example_bambu_petg.json
examples/: autofix_demo.py  autofix_demo_best.stl  cadquery_demo.py  flat_roof.stl  flat_roof_fixed.stl
fixtures/: 01_teardrop_point_up.stl  02_teardrop_floating.stl  03_gusset_flat_flange.stl  04_cone_crescent_rims.stl  05_flush_morph.stl  06_clean_final.stl  FIXTURES.md  ada4965_sensor_holder.stl  source_probe_holder.scad
