[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stalagmite"
version = "0.14.0"
description = "Make stalagmites, not stalactites: mechanical enforcement of FDM print physics on STL geometry, with classified violations, prescriptive repairs, and constraint-aware orientation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "cherno" }]
keywords = ["3d-printing", "dfam", "fdm", "stl", "openscad", "overhang", "design-for-additive-manufacturing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy", "trimesh", "shapely>=2.0", "networkx", "scipy"]

[project.urls]
Homepage = "https://github.com/Imagican/stalagmite"
Repository = "https://github.com/Imagican/stalagmite"
Issues = "https://github.com/Imagican/stalagmite/issues"

[project.optional-dependencies]
dev = ["pytest"]
cadquery = ["cadquery"]

[project.scripts]
stalagmite = "dfam_audit:main"
stalagmite-orient = "dfam_orient:main"
stalagmite-diff = "dfam_diff:main"
stalagmite-gui = "dfam_gui:main"
# legacy aliases
dfam-audit = "dfam_audit:main"
dfam-orient = "dfam_orient:main"

[tool.setuptools]
py-modules = ["stalagmite", "dfam_audit", "dfam_orient", "dfam_report", "dfam_profiles", "dfam_diff", "dfam_gui", "vendor_three"]
